--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -73,39 +73,49 @@ voortaan gebruiken voor $g$.
 Om de grootte van de zwaartekracht op een voorwerp te berekenen, moet je de
 **massa van het voorwerp vermenigvuldigen met de zwaarteveldsterkte**.
 
-$$F_{z} = m \cdot g$$
+
+$$
+F_{z} = m \cdot g
+$$
+
 
 Stel dat onze bowlingbal een massa heeft van $5{,}00~\si{kg}$. Welke kracht zal
 Dirk dan voelen wanneer hij de bal vasthoudt op de aarde? Neem
 $g_{aarde}=9{,}81~\si{N/kg}$.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 F\_{zb} &= m_b \cdot g\_{aarde}\\
  &= 5{,}00~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 49{,}1~\si{N}
-\end{aligned}$
+\end{aligned}
+$$
 
 ![](img/zwaartekracht_bowlingbal_aarde_oefening.png)
 
 Dirk gaat nu naar de maan en houdt daar dezelfde bowlingbal vast. Welke kracht
 voelt Dirk nu? Neem $g_{maan}=1{,}62~\si{N/kg}$.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 F\_{zb} &= m_b \cdot g\_{maan}\\
  &= 5{,}00~\si{kg} \cdot 1{,}62~\si{N/kg}\\
  &= 8{,}10~\si{N}
-\end{aligned}$
+\end{aligned}
+$$
 
 ![](img/zwaartekracht_bowlingbal_maan_oefening.png)
 
 De voetbal heeft een massa van $410~\si{g}$. Welke kracht voelt Dirk als hij de
 bal vasthoudt op aarde?
 
-$\begin{aligned}
+$$
+\begin{aligned}
 F\_{zv} &= m_v \cdot g\_{aarde}\\
  &= 0{,}410~\si{kg} \cdot 9{,}81~\si{N/kg}\\
  &= 4{,}02~\si{N}
-\end{aligned}$
+\end{aligned}
+$$
 
 ![](img/zwaartekracht_voetbal_aarde_oefening.png)
 
@@ -120,7 +130,11 @@ hetzelfde aanvoelt qua gewicht als twee voetballen op aarde.
 De grootte van de zwaartekracht op een voorwerp vind je door de massa van dat
 voorwerp te vermenigvuldigen met de zwaarteveldsterkte $g$.
 
-$$F_{z} = m \cdot g$$
+
+$$
+F_{z} = m \cdot g
+$$
+
 
 Voor situaties op aarde mag je ervan uitgaan dat $g = 9{,}81~\si{N/kg}$.
 </Attention>
