--- a/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/oplossen/index.mdx
@@ -17,18 +17,30 @@ waar er maar één onbekende is <Mute text="(genaamd $x$)" /> en waarbij de
 **hoogste macht van die $x$ gelijk is aan $1$**. Bijvoorbeeld de
 vergelijking
 
-$$-3x - 2 + x = 15 - 6x + 9x -3$$
+
+$$
+-3x - 2 + x = 15 - 6x + 9x -3
+$$
+
 
 is een eerstegraadsvergelijking omdat elke $x$ een macht $1$ heeft.
 De volgende vergelijking is **geen** eerstegraadsvergelijking
 
-$$2 - 9x^\red{2} + 6x = 15 - 6x$$
+
+$$
+2 - 9x^\red{2} + 6x = 15 - 6x
+$$
+
 
 omdat de hoogste macht van $x$ hier $\red{2}$ is. De volgende vergelijking is
 wel een eerstegraadsvergelijking, maar heeft **meerdere onbekenden**, namelijk
 $x$, $y$ en $z$:
 
-$$-4z + 2x -9 = 3 + 5y - x$$
+
+$$
+-4z + 2x -9 = 3 + 5y - x
+$$
+
 
 In deze les zien we hoe we eerstegraadsvergelijkingen in één onbekende ($x$)
 kunnen oplossen in drie stappen. Tijdens deze stappen zullen we de vergelijking
@@ -47,30 +59,42 @@ De drie stappen zijn:
 
 Stel bijvoorbeeld dat we de volgende vergelijking willen oplossen:
 
-$$-3x - 2 + x = 15 - 6x + 9x -3$$
+
+$$
+-3x - 2 + x = 15 - 6x + 9x -3
+$$
+
 
 De eerste stap in het oplossen van een eerstegraadsvergelijking is de
 vergelijking _opkuisen_ tot zowel de linker- als rechterkant de vorm $ax + b$
 heeft. Dit doen we door links en rechts de termen met hetzelfde lettergedeelte samen
 te nemen.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \red{-3x} - 2 \red{+ x} &= \blue{15}
 \green{- 6x}
 \green{+ 9x} \blue{-3}\\
  \Leftrightarrow \red{-2x} - 2 &= \green{3x} + \blue{12}
-\end{aligned}$
+\end{aligned}
+$$
 
 We krijgen nu een vergelijking van de vorm
-$$\red{a\_{links}\cdot x} + b\_{links} = \green{a\_{rechts}\cdot x} + \blue{b\_{rechts}}$$
+
+$$
+\red{a\_{links}\cdot x} + b\_{links} = \green{a\_{rechts}\cdot x} + \blue{b\_{rechts}}
+$$
+
 
 Waarbij
-$\begin{aligned}
+$$
+\begin{aligned}
 \red{a\_{links}} &= \red{-2}\\
  b\_{links} &= -2\\
  \green{a\_{rechts}} &= \green{3} \\
  \blue{b\_{rechts}} &= \blue{12}
-\end{aligned}$
+\end{aligned}
+$$
 
 ## Alle $x$-en naar links
 
@@ -82,25 +106,33 @@ $\green{a\_{rechts}x}$ uit het
 rechterlid wegvallen en hebben we enkel in het linkerlid nog een $x$.
 In ons voorbeeld is de $\green{a\_{rechts}x}$ uit het rechterlid $\green{3x}$.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \Leftrightarrow -2x - 2 &= 3x + 12\\
  \Leftrightarrow -2x - 2 \green{- 3x} &= 3x + 12 \green{- 3x}\\
- \Leftrightarrow -2x - 2 \udouble{\green{- 3x}} &= \cancelto{0}{3x\green{- 3x}} + 12\\
+ \Leftrightarrow -2x - 2 \green{- 3x} &= \cancel{3x\green{- 3x}} + 12\\
  \Leftrightarrow -5x - 2 &= 12\\
-\end{aligned}$
+\end{aligned}
+$$
 
 We zien dat de $3x$ inderdaad is verdwenen uit het rechterlid.
 We krijgen een vergelijking van de vorm
 
-$$a\cdot x + b\_{links} = b_{rechts}$$
+
+$$
+a\cdot x + b\_{links} = b_{rechts}
+$$
+
 
 met enkel nog in het linkerlid een $x$. Hierbij is
 
-$\begin{aligned}
+$$
+\begin{aligned}
 a &= -5\\
  b\_{links} &= -2\\
  b\_{rechts} &= 12
-\end{aligned}$
+\end{aligned}
+$$
 
 ## Alle getallen naar rechts
 
@@ -112,36 +144,46 @@ naar het rechterlid. Dat doen we ook in twee stappen.
    linkerlid.
 
 In de eerste stap trekken we $b\_{links}$ <Mute text="($= -2$)" /> af van het linker- en rechterlid:
-$\begin{aligned}
+$$
+\begin{aligned}
 \Leftrightarrow -5x - 2 &= 12\\
  \Leftrightarrow -5x - 2 \orange{- (-2)} &= 12 \orange{- (-2)}\\
- \Leftrightarrow -5x \cancelto{0}{- 2\orange{- (-2)}} &= 12 \orange{+ 2}\\
+ \Leftrightarrow -5x \cancel{- 2\orange{- (-2)}} &= 12 \orange{+ 2}\\
  \Leftrightarrow -5x &= 14\\
-\end{aligned}$
+\end{aligned}
+$$
 
 We hebben nu een vergelijking van de vorm
 
-$$a\cdot x = b$$
+
+$$
+a\cdot x = b
+$$
+
 
 met nog maar één getal in het rechterlid. Hierbij is
 
-$\begin{aligned}
+$$
+\begin{aligned}
 a &= -5 \\
  b &= 14
-\end{aligned}$
+\end{aligned}
+$$
 
 Nu moeten we enkel nog de $a$ links weg krijgen. Dat kunnen we doen door het
 linker- en rechterlid te delen door $a$ <Mute text="($= -5$)" />.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \Leftrightarrow -5x &= 14\\
  \Leftrightarrow \frac{-5x}{\orange{-5}} &= \frac{14}{\orange{-5}}\\
- \Leftrightarrow \cancelto{1}{\frac{-5}{\orange{-5}}}\cdot x &= \frac{14}{\orange{-5}}\\
+ \Leftrightarrow \cancel{\frac{-5}{\orange{-5}}}\cdot x &= \frac{14}{\orange{-5}}\\
  \Leftrightarrow x &= -\frac{14}{5}\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Et voilà! We hebben $x$ gevonden! De [oplossingsverzameling](intro#oplossingsverzameling) van de vergelijking
-is $V = \\{-\frac{14}{5}\\}$.
+is $V = \{-\frac{14}{5}\}$.
 
 ## Samengevat
 
@@ -149,15 +191,31 @@ is $V = \\{-\frac{14}{5}\\}$.
 
 Om een vergelijking op te lossen van de eerste graad met één onbekende, volgen we drie stappen:
 
-1. Kuis de vergelijking op tot iets van de vorm $$a\_{links}\cdot x + b\_{links} = a\_{rechts}\cdot x + b\_{rechts}$$
+1. Kuis de vergelijking op tot iets van de vorm 
+$$
+a_{links}\cdot x + b\_{links} = a\_{rechts}\cdot x + b\_{rechts}
+$$
+
 2. Breng alle $x$-en naar de linkerkant door van de vergelijking
    $a\_{rechts}\cdot x$ af te trekken. Je krijgt nu iets van de vorm
-   $$a\cdot x + b\_{links} = b\_{rechts}$$
+   
+$$
+a\cdot x + b\_{links} = b\_{rechts}
+$$
+
 3. Breng alle getallen naar de rechterkant door van de vergelijking eerst
-   $b\_{links}$ af te trekken zodat je iets van de vorm $$a\cdot x = b$$
+   $b\_{links}$ af te trekken zodat je iets van de vorm 
+$$
+a\cdot x = b
+$$
+
    krijgt, en vervolgens te delen door $a$.
    De oplossing is
-   $$x = \frac{b}{a}$$
+   
+$$
+x = \frac{b}{a}
+$$
+
    met $a \in \mathbb{R}_0$, $b \in \mathbb{R}$.
 
 </Attention>
