--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -52,7 +52,11 @@ meteen de afgeleide in die x-waarde. Maar **hoe vinden we die afgeleide
 functie**? Als voorbeeld zoeken we in deze paragraaf de afgeleide functie van
 de volgende tweedegraadsfunctie:
 
-$$f(x) = -3x^2 + 4x - 1$$
+
+$$
+f(x) = -3x^2 + 4x - 1
+$$
+
 
 We leerden in de vorige les hoe je in een [bepaalde x-waarde de
 afgeleide](in_een_punt) kan berekenen. Daarvoor vulden we de x-waarde in in
@@ -61,14 +65,22 @@ bepaald getal in te vullen, **vullen we nu $x$ in**.
 
 Herinner je de definitie van de afgeleide van $f(x)$ in $a$:
 
-$$ f'(a) = \lim\_{\Delta x \rightarrow 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} $$
+
+$$
+ f'(a) = \lim\_{\Delta x \rightarrow 0} \frac{ f(a + \Delta x) - f(a) }{\Delta x} 
+$$
+
 
 Lees zeker [onze introductie tot afgeleiden](intro) eens na als je die
 formule niet zo goed begrijpt. Wij zijn nu op zoek naar **de afgeleide functie
 van een functie**, en dat is niet $f'(\blue{a})$, maar wel $f'(\blue{x})$. We
 moeten in onze definitie van $f'(a)$ de $a$ dus gewoon vervangen door een $x$:
 
-$$ f'(\blue{x}) = \lim\_{\Delta x \rightarrow 0} \frac{ f(\blue{x} + \Delta x) - f(\blue{x}) }{\Delta x} $$
+
+$$
+ f'(\blue{x}) = \lim\_{\Delta x \rightarrow 0} \frac{ f(\blue{x} + \Delta x) - f(\blue{x}) }{\Delta x} 
+$$
+
 
 En zo hebben we de **definitie van de afgeleide functie van $f(x)$**!
 🙌 Als we naar die definitie kijken, zien we dat er twee keer iets
@@ -147,12 +159,24 @@ $f(x) = -3x^2 + 4x -1$ in $x=2$ berekend. Dat vergde toen heel wat werk om te
 vinden dat $f'(2)=-8$. Nu kunnen we dezelfde afgeleide veel sneller berekenen
 omdat we nu weten dat $f'(x) = -6x + 4$:
 
-$$f'(\blue{2}) = -6\cdot\blue{2} + 4 = -8$$
+
+$$
+f'(\blue{2}) = -6\cdot\blue{2} + 4 = -8
+$$
+
 
 We kunnen nu heel snel ook andere afgeleiden berekenen:
 
-$$f'(\blue{3}) = -6\cdot \blue{3} + 4 = -14$$
-$$f'(\blue{-1}) = -6\cdot \blue{(-1)} + 4 = 10$$
+
+$$
+f'(\blue{3}) = -6\cdot \blue{3} + 4 = -14
+$$
+
+
+$$
+f'(\blue{-1}) = -6\cdot \blue{(-1)} + 4 = 10
+$$
+
 
 ## Sneller de afgeleide functie vinden
 
@@ -170,6 +194,10 @@ afgeleide te vinden**. Hier leren we later meer over!
 De afgeleide functie $f'(x)$ is de functie die voor elke x-waarde (waarin
 $f(x)$ afleidbaar is) de afgeleide van $f(x)$ in die x-waarde geeft.
 
-$$ f'(x) = \lim\_{\Delta x \rightarrow 0} \frac{ f(x + \Delta x) - f(x) }{\Delta x} $$
+
+$$
+ f'(x) = \lim\_{\Delta x \rightarrow 0} \frac{ f(x + \Delta x) - f(x) }{\Delta x} 
+$$
+
 
 </Attention>
