--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -16,7 +16,11 @@ interpretatie van een afgeleide."
 We hebben al geleerd hoe we de ogenblikkelijke verandering, of de _afgeleide_,
 van een functie $f(x)$ in een punt $x = a$ kunnen berekenen:
 
-$$ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} $$
+
+$$
+ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} 
+$$
+
 
 > Komt deze formule wat uit de lucht gevallen voor jou? 🤨 Lees dan zeker onze
 > [les over het berekenen van de afgeleide in een punt](afgeleide) en onze
@@ -58,14 +62,22 @@ met _drie_ keer de rico stijgen of dalen. Als we **hoeveel we stijgen of
 dalen** dus gaan **delen door het aantal stappen opzij**, dan krijgen we
 _altijd_ de rico! 💡
 
-$$\text{rico} = \frac{\green{\text{hoeveel we stijgen of dalen}}}{\orange{\text{aantal stappen opzij}}}$$
+
+$$
+\text{rico} = \frac{\green{\text{hoeveel we stijgen of dalen}}}{\orange{\text{aantal stappen opzij}}}
+$$
+
 
 Het aantal stappen opzij is eigenlijk hetzelfde als hoeveel verschil er zit
 tussen de _x-waarde_ van het rechtse punt en de _x-waarde_ van het linkse punt.
 We zullen de x-waarde van het rechtse punt $\orange{x\_2}$ noemen en de
 x-waarde van het linkse punt $\orange{x\_1}$:
 
-$$\text{rico} = \frac{\green{\text{hoeveel we stijgen of dalen}}}{\orange{x\_2} - \orange{x\_1}}$$
+
+$$
+\text{rico} = \frac{\green{\text{hoeveel we stijgen of dalen}}}{\orange{x\_2} - \orange{x\_1}}
+$$
+
 
 Hoeveel we stijgen of dalen, is dan weer hetzelfde als hoeveel verschil er zit
 tussen de _y-waarde_ van het rechtse punt en de _y-waarde_ van het linkse punt.
@@ -74,7 +86,11 @@ $x\_2$. Die kunnen we dus schrijven als $\green{f(x\_2)}$. Zo is ook de
 y-waarde van het _linkse_ punt hetzelfde als de functiewaarde van $x\_1$, of
 $\green{f(x\_1)}$:
 
-$$\text{rico} = \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}$$
+
+$$
+\text{rico} = \frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}
+$$
+
 
 Dit is de formule voor het berekenen van de rico van een eerstegraadsfunctie
 $f(x)$!
@@ -87,7 +103,15 @@ bekijken, zien we toch wel opvallende gelijkenissen met de formule voor het
 
 | Formule voor de rico van een eerstegraadsfunctie                                     | Formule voor het differentiequotiënt                                                 |
 | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------ |
-| $$\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}$$ | $$\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}$$ |
+| 
+$$
+\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}
+$$
+ | 
+$$
+\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{\orange{x\_2} - \orange{x\_1}}}
+$$
+ |
 
 De formule voor de **rico en het differentiequotiënt zijn identiek dezelfde**!
 Wat betekent dat? Wel, wanneer we een differentiequotiënt berekenen, berekenen
@@ -104,7 +128,11 @@ afgeleide van een functie in $x = a$ vinden door het differentiequotiënt
 te berekenen waarbij we $\Delta x$ <Mute text="(of $x_2 - x_1$)" /> naar $0$
 laten gaan:
 
-$$ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} $$
+
+$$
+ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} 
+$$
+
 
 Als $\Delta x$ naar $0$ gaat, betekent het dat de twee punten waartussen we het
 differentiequotiënt berekenen steeds **dichter en dichter** bij elkaar komen.
@@ -137,7 +165,11 @@ In de voorgaande paragrafen hebben we twee dingen geleerd:
 De formule van een afgeleide in een punt combineert die limiet en dat
 differentiequotiënt:
 
-$$ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} $$
+
+$$
+ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} 
+$$
+
 
 Het differentiequotiënt berekent een rico tussen twee punten die door de limiet
 héél dicht bij elkaar worden gebracht. Omdat die twee punten een raaklijn gaan
