--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -20,31 +20,43 @@ machten met hetzelfde grondtal** in ons achterhoofd houden. Stel bijvoorbeeld
 dat we de volgende vermenigvuldiging hebben <Mute text="(waarbij $a \in
 \mathbb{R}$)" />:
 
-$$a^2\cdot a^3$$
+
+$$
+a^2\cdot a^3
+$$
+
 
 We zien dat de twee factoren van de vermenigvuldiging allebei het **grondtal
 $a$** hebben. De rekenregel voor het vermenigvuldigen van machten met hetzelfde
 grondtal zegt dat we in dat geval de **exponenten bij elkaar moeten optellen**:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 a^2\cdot a^3 &= a^{2 + 3}\\
  &= a^5
-\end{aligned}$
+\end{aligned}
+$$
 
 De rekenregel voor het _delen_ van machten met hetzelfde grondtal is heel
 gelijkaardig. Stel dat we de volgende deling moeten uitrekenen <Mute
 text="(waarbij $x \in \mathbb{R}_0$)" />:
 
-$$x^5:x^2$$
+
+$$
+x^5:x^2
+$$
+
 
 We zien dat het deeltal $x^5$ hetzelfde grondtal heeft als de deler $x^2$. De
 rekenregel voor het delen van machten met hetzelfde grondtal zegt dat we in dat
 geval de **exponenten van elkaar moeten aftrekken**:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 x^5:x^2 &= x^{5 - 2}\\
  &= x^3
-\end{aligned}$
+\end{aligned}
+$$
 
 Als we deze rekenregels goed kunnen toepassen, zal het vermenigvuldigen en
 delen van eentermen veel eenvoudiger worden.
@@ -79,40 +91,54 @@ Het vermenigvuldigen van eentermen gaat als volgt:
 Stel bijvoorbeeld dat we de volgende eentermen met elkaar willen
 vermenigvuldigen:
 
-$$-3x^3y^2 \cdot 4xy^2$$
+
+$$
+-3x^3y^2 \cdot 4xy^2
+$$
+
 
 De eerste stap is om de **coëfficiënten** van de eentermen met elkaar te
 vermenigvuldigen:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{-3}x^3y^2 \cdot \orange{4}xy^2
 &= (\orange{-3\cdot 4})\cdot x^3y^2\cdot xy^2\\
  &= \orange{-12}\cdot x^3y^2\cdot xy^2
-\end{aligned}$
+\end{aligned}
+$$
 
 Vervolgens vermenigvuldigen we het lettergedeelte van beide eentermen. We
 zullen beginnen met het vermenigvuldigen van de factoren die $x$ als grondtal
 hebben:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -12\cdot \orange{x^3}y^2\cdot \orange{x}y^2
 &= -12\cdot\orange{x^{3 + 1}}\cdot y^2\cdot y^2\\
  &= -12\orange{x^{4}}\cdot y^2\cdot y^2
-\end{aligned}$
+\end{aligned}
+$$
 
 Je ziet dat we hiervoor de rekenregel voor het vermenigvuldigen van machten met
 hetzelfde grondtal hebben toegepast. Ten slotte vermenigvuldigen we de factoren
 die $y$ als grondtal hebben:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -12x^{4}\cdot \orange{y^2}\cdot \orange{y^2}
 &= -12x^{4}\cdot \orange{y^{2 + 2}}\\
  &= -12x^{4}\orange{y^{4}}
-\end{aligned}$
+\end{aligned}
+$$
 
 Het resultaat van de vermenigvuldiging is dus:
 
-$$-12x^{4}y^{4}$$
+
+$$
+-12x^{4}y^{4}
+$$
+
 
 ## Een eenterm delen door een eenterm
 
@@ -126,40 +152,54 @@ Het delen van eentermen gaat als volgt:
 
 Stel dat we de volgende deling moeten uitvoeren:
 
-$$21u^2v^4:(-7uv^2)$$
+
+$$
+21u^2v^4:(-7uv^2)
+$$
+
 
 Dan gaan we eerst de **coëfficiënt** van de eenterm in het deeltal (de $21$)
 delen door de coëfficiënt van de eenterm in de deler (de $-7$):
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{21}u^2v^4:(\orange{-7}uv^2)
 &= \big(\orange{21}:(\orange{-7})\big)u^2v^4:(uv^2)\\
  &= \orange{-3}u^2v^4:(uv^2)\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Vervolgens moeten we het **lettergedeelte** van het deeltal (de $u^2v^4$) delen
 door het lettergedeelte van de deler (de $uv^2$). Hiervoor kunnen we de
 rekenregel van het delen van machten met hetzelfde grondtal gebruiken. We
 zullen beginnen met het delen van de machten met grondtal $u$:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -3\orange{u^2}v^4:(\orange{u}v^2)
 &= -3\orange{u^{2 - 1}}v^4:v^2\\
  &= -3\orange{u^{1}}v^4:v^2\\
  &= -3\orange{u}v^4:v^2\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Ten slotte delen we ook de factoren die grondtal $v$ hebben:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -3u\orange{v^4}:\orange{v^2}
 & = -3u\orange{v^{4 - 2}}\\
  & = -3u\orange{v^{2}}\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Klaar! 🎉 Het resultaat van onze deling is:
 
-$$-3uv^{2}$$
+
+$$
+-3uv^{2}
+$$
+
 
 ## Eentermen met letterexponenten vermenigvuldigen of delen
 
@@ -167,7 +207,11 @@ Het kan soms voorkomen dat een eenterm **letterexponenten** bevat. Stel
 bijvoorbeeld dat we de volgende vermenigvuldiging hebben <Mute text="($m, n \in
 \mathbb{Z}$)" />:
 
-$$x^{(m + 1)}y^n\cdot x^2y^n$$
+
+$$
+x^{(m + 1)}y^n\cdot x^2y^n
+$$
+
 
 Dan moeten we weer goed de **rekenregel voor het vermenigvuldigen van machten
 met hetzelfde grondtal** in ons achterhoofd houden. Die zegt dat we bij zo een
@@ -175,43 +219,57 @@ vermenigvuldiging de **exponenten moeten optellen**. We zullen eens tonen hoe
 dat gaat wanneer we de lettergedeelten met $x$ als grondtal met elkaar gaan
 vermenigvuldigen:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{x^{(m + 1)}}y^n\cdot x^2y^n
 &= y^n\cdot \orange{x^{(m + 1)}}x^2\cdot y^n\\
  &= y^n\cdot x^{\orange{(m + 1)} + 2}y^n\\
  &= y^n\cdot x^{\orange{m + 1} + 2}y^n\\
  &= y^n\cdot x^{(m + 3)}y^n\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Je ziet dat we ook hier weer niets meer doen dan de exponenten bij elkaar op te
 tellen. We vermenigvuldigen nu op dezelfde manier de lettergedeelten met $y$
 als grondtal:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{y^n}\cdot x^{(m + 3)}y^n
 &= x^{(m + 3)}\cdot\orange{y^n}y^n\\
  &= x^{(m + 3)}y^{\orange{n} + n}\\
  &= x^{(m + 3)}y^{2n}\\
-\end{aligned}$
+\end{aligned}
+$$
 
 We krijgen het volgende resultaat:
 
-$$x^{(m + 3)}y^{2n}$$
+
+$$
+x^{(m + 3)}y^{2n}
+$$
+
 
 Voor het **delen** van eentermen met letterexponenten doen we precies
 hetzelfde, maar dan passen we uiteraard de rekenregels voor het _delen_ van
 machten met hetzelfde grondtal toe. Een eenvoudig voorbeeld:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 a^{(m+2)}b^m:(a^{(2m - 1)}b^3)
 &= a^{(m+2) - (2m - 1)}b^{m - 3}\\
  &= a^{m+ 2 - 2m + 1}b^{m - 3}\\
  &= a^{-m + 3}b^{m - 3}\\
-\end{aligned}$
+\end{aligned}
+$$
 
 De uitkomst van deze deling is dus:
 
-$$a^{(-m+ 3)}b^{(m - 3)}$$
+
+$$
+a^{(-m+ 3)}b^{(m - 3)}
+$$
+
 
 ## Samengevat
 
