--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -35,7 +35,11 @@ van x-waarden waarvoor er een functiewaarde <Mute text="(een y-waarde)" /> besta
 Een typisch voorbeeld is het domein van de functie die als
 [functievoorschrift](voorschrift) heeft
 
-$$f(x) = \sqrt{x}$$
+
+$$
+f(x) = \sqrt{x}
+$$
+
 
 Omdat de wortel van een negatief
 getal niet bestaat, kan $f(x)$ niet bestaan
@@ -44,11 +48,19 @@ negatieve x-waarden.
 Het domein van deze functie $f$ is dus alle _positieve_ reële getallen, want
 enkel voor positieve x-waarden bestaat er een functiewaarde. We schrijven:
 
-$$dom f = \mathbb{R}^+$$
+
+$$
+dom f = \mathbb{R}^+
+$$
+
 
 Dit kunnen we ook schrijven als een interval:
 
-$$dom f = [0; +\infty[%]$$
+
+$$
+dom f = [0; +\infty[%]
+$$
+
 
 ## Beeld van een functie
 
@@ -58,23 +70,39 @@ van alle y-waarden die ooit uit de functie kunnen komen.
 Een typisch voorbeeld is het beeld van de functie die als
 [functievoorschrift](voorschrift) heeft
 
-$$f(x) = x^2$$
+
+$$
+f(x) = x^2
+$$
+
 
 Omdat het kwadraat van elk reëel getal positief is, kunnen er uit deze functie
 $f$ enkel _positieve_ getallen komen. Met andere woorden is het beeld van deze
 functie alle _positieve_ reële getallen. We schrijven:
 
-$$bld f = \mathbb{R}^+$$
+
+$$
+bld f = \mathbb{R}^+
+$$
+
 
 Dit kunnen we natuurlijk ook schrijven als een interval:
 
-$$bld f = [0; +\infty[%]$$
+
+$$
+bld f = [0; +\infty[%]
+$$
+
 
 ## Domein en beeld op een grafiek
 
 Het domein en beeld van een functie kan je ook aflezen van de [grafiek van die
 functie](grafiek). Neem bijvoorbeeld de grafiek van de functie
-$$f(x) = 3\cdot \sqrt{x + 5} - 6$$
+
+$$
+f(x) = 3\cdot \sqrt{x + 5} - 6
+$$
+
 Die grafiek ziet er zo uit:
 
 ![](plt/fx.png)
