--- a/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
+++ b/src/content/lessen/wiskunde/functies/nulpunten/index.mdx
@@ -21,7 +21,11 @@ dan $(\orange{x},~0)$.
 Stel dat we een $x$ in het machientje stoppen en dat er $0$ uit komt. Dan noemen
 we $x$ een **nulwaarde** van de functie. Bijvoorbeeld voor de functie met als
 [functievoorschrift](voorschrift)
-$$f(x) = x - 2$$
+
+$$
+f(x) = x - 2
+$$
+
 is $x=\orange{2}$ een nulwaarde want $f(\orange{2}) = \orange{2} - 2 = 0$.
 
 Je vindt de nulwaarden van een functie door **het functievoorschrift gelijk te
@@ -30,11 +34,13 @@ stellen het functievoorschrift gelijk aan _nul_ omdat we op zoek zijn naar de
 x-waarden die het voorschrift <Mute text="en dus de y-waarde" /> _nul_ maken.
 Voor het bovenstaande voorbeeld:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 f(x) = 0 \\
  \Leftrightarrow x - 2 = 0 \\
  \Leftrightarrow x = 2
-\end{aligned}$
+\end{aligned}
+$$
 
 We vinden inderdaad de nulwaarde $x=2$.
 
