--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -58,7 +58,11 @@ stappen.
 3. Vind de tekens van $y$ tussen alle x-waarden in het schema <Mute text="(tenzij die x-waarden buiten het domein liggen)" />.
 
 We werken deze stappen uit voor de <Mute text="(reële)" /> functie met
-[voorschrift](voorschrift) $$f(x) = -x^2 + 9$$
+[voorschrift](voorschrift) 
+$$
+f(x) = -x^2 + 9
+$$
+
 Dit is de functie die hoort bij de grafiek van daarnet. We hopen dus ook
 hetzelfde tekenschema te krijgen.
 
@@ -68,11 +72,19 @@ We kunnen van eender welk reëel getal het kwadraat berekenen, dus we kunnen
 $f(x) = -x^2 + 9$ voor elk reëel getal $x$ berekenen. Dit betekent dat het
 domein van $f$ alle reële getallen bevat:
 
-$$dom f = \mathbb{R}$$
+
+$$
+dom f = \mathbb{R}
+$$
+
 
 Als interval geschreven is dit
 
-$$dom f = \left] -\infty, +\infty \right[%]$$
+
+$$
+dom f = \left] -\infty, +\infty \right[%]
+$$
+
 
 De grenzen van het domein zijn dus $-\infty$ en $+\infty$. Die zetten we op de
 bovenste rij van het tekenschema:
@@ -85,7 +97,11 @@ bovenste rij van het tekenschema:
 
 We vinden de nulwaarden van de functie $f(x) = -x^2 + 9$ door de
 vergelijking
-$$-x^2 + 9 = 0$$
+
+$$
+-x^2 + 9 = 0
+$$
+
 op te lossen naar $x$.
 Als je dat zou doen, vind je dat $x=-3$ en $x=3$ de nulwaarden zijn van deze functie $f$. De
 [nulpunten](nulpunten#nulpunten-van-een-functie) zijn dus $(-3,~\blue{0})$ en
@@ -109,7 +125,11 @@ dat _altijd_ werkt is:
 Bijvoorbeeld het teken van
 $y$ voor $x$ tussen $-3$ en $3$. Een eenvoudig getal dat ligt tussen $-3$ en $3$ is
 $0$. Die vullen we in in $f(x) = -x^2 + 9$:
-$$f(\orange{0}) = -(\orange{0})^2 + 9 = \green{9}$$
+
+$$
+f(\orange{0}) = -(\orange{0})^2 + 9 = \green{9}
+$$
+
 We komen een **<span class="green">positief</span>** getal uit, dus we zetten een $\green{+}$ tussen $-3$ en $3$:
 
 | Ingang $x$             | $-\infty$ |     | $-3$       |             | $3$        |     | $+\infty$ |
@@ -117,7 +137,11 @@ We komen een **<span class="green">positief</span>** getal uit, dus we zetten ee
 | **Uitgang** $y = f(x)$ |           |     | $\blue{0}$ | $\green{+}$ | $\blue{0}$ |     |
 
 Voor een x-waarde tussen $-\infty$ en $-3$, kunnen we $-5$ nemen.
-$$f(\orange{-5}) = -(\orange{-5})^2 + 9 = -25 + 9 = \red{-16}$$
+
+$$
+f(\orange{-5}) = -(\orange{-5})^2 + 9 = -25 + 9 = \red{-16}
+$$
+
 Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $-\infty$ en $-3$:
 
 | Ingang $x$             | $-\infty$ |           | $-3$       |             | $3$        |     | $+\infty$ |
@@ -125,8 +149,12 @@ Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten ee
 | **Uitgang** $y = f(x)$ |           | $\red{-}$ | $\blue{0}$ | $\green{+}$ | $\blue{0}$ |     |
 
 Voor een x-waarde tussen $3$ en $+\infty$, ten slotte, kunnen we
-$5$ nemen. $$f(\orange{5}) = -(\orange{5})^2 + 9 = -25 + 9 =
-\red{-16}$$ Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $3$ en
+$5$ nemen. 
+$$
+f(\orange{5}) = -(\orange{5})^2 + 9 = -25 + 9 =
+\red{-16}
+$$
+ Invullen geeft een **<span class="red">negatief</span>** getal, dus we zetten een $\red{-}$ tussen $3$ en
 $+\infty$:
 
 | Ingang $x$             | $-\infty$ |           | $-3$       |             | $3$        |           | $+\infty$ |
