--- a/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/getalwaarde/index.mdx
@@ -12,19 +12,28 @@ Wanneer een veelterm [variabelen](variabelen) bevat, geeft de veelterm enkel een
 
 Je berekent altijd de getalwaarde van een veelterm **voor bepaalde waarden van de variabelen** in de veelterm. Stel bijvoorbeeld dat we de volgende veelterm hebben:
 
-$$-5ab^2 + 3a$$
+
+$$
+-5ab^2 + 3a
+$$
+
 
 Als we hier een getalwaarde van willen berekenen, moeten we eerst zeggen **voor welke waarden van $a$ en $b$** we dat willen doen. We kunnen bijvoorbeeld de **getalwaarde voor $\orange{a=2}$ en $\green{b=-1}$ bepalen**.
 Dat gaat als volgt:
 
 1. **Vervang elke variabele** door de gegeven getallen:
-   $$-5\orange{a}\green{b}^2 + 3\orange{a} = -5\cdot\orange{2}\cdot\green{(-1)}^2 + 3\cdot \orange{2} $$
+   
+$$
+-5\orange{a}\green{b}^2 + 3\orange{a} = -5\cdot\orange{2}\cdot\green{(-1)}^2 + 3\cdot \orange{2} 
+$$
+
 2. Je krijgt een bewerking met enkel getallen. **Reken die bewerking uit**:
    $\begin{aligned}
    -5\cdot\orange{2}\green{(-1)}^2 + 3\cdot \orange{2} &= -5\cdot\orange{2}\cdot\green{1} + 3\cdot \orange{2}\\
     &= -10 + 6\\
     &= -4
-   \end{aligned}$
+   \end{aligned}
+$$
 
 De getalwaarde van de veelterm $-5ab^2 + 3a$ voor $\orange{a=2}$ en $\green{b=-1}$ is dus gelijk aan $-4$.
 
@@ -41,12 +50,14 @@ variabele erdoor vervangt**.
 
 We kunnen ook eens kijken wat de getalwaarde van de veelterm $-5ab^2 + 3a$ is voor $\orange{a=-3}$ en $\green{b=-2}$:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -5\orange{a}\green{b}^2 + 3\orange{a} &= -5\cdot\orange{(-3)}\green{(-2)}^2 + 3\cdot \orange{(-3)}\\
 &= -5\cdot\orange{(-3)}\cdot\green{4} + 3\cdot \orange{(-3)}\\
  &= 60 + (-9)\\
  &= 51
-\end{aligned}$
+\end{aligned}
+$$
 
 Wanneer $\orange{a=-3}$ en $\green{b=-2}$, heeft de veelterm $-5ab^2 + 3a$ de
 getalwaarde $51$. Je ziet dat de getalwaarde van een veelterm verschillend kan
@@ -56,23 +67,27 @@ zijn voor andere waarden van de variabelen.
 
 Bepaal de getalwaarde van de veelterm $-3x^2 + 2x - 1$ voor $x = -3$:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -3\orange{x}^2 + 2\orange{x} - 1 &= -3\cdot\orange{(-3)}^2 + 2\cdot \orange{(-3)}\\\\
 &= -3 \cdot \orange{(-9)} + 2 \cdot \orange{(-3)}\\
  &= 27 + (-6)\\
  &= 21
-\end{aligned}$
+\end{aligned}
+$$
 
 Bepaal de getalwaarde van de veelterm $2pq^3 + 3p^2q - p + 2q$ voor $p = 5$ en
 $q = -\sqrt{2}$:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 2\orange{p}\green{q}^3 + 3\orange{p}^2\green{q} - \orange{p} + 2\green{q} &=
 2\cdot\orange{5}\cdot\green{(-\sqrt{2})}^3 + 3\cdot\orange{5}^2\cdot\green{(-\sqrt{2})} - \orange{5} + 2\cdot\green{(-\sqrt{2})}\\
  &= 2\cdot\orange{5}\cdot(-2\sqrt{2}) + 3\cdot 25\cdot\green{(-\sqrt{2})} - \orange{5} + 2\cdot\green{(-\sqrt{2})}\\
  &= -20\sqrt{2} - 75\sqrt{2} - \orange{5} - 2\sqrt{2}\\
  &= - \orange{5} - 97\sqrt{2}
-\end{aligned}$
+\end{aligned}
+$$
 
 ## Samengevat
 
