--- a/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/beduidende_cijfers/index.mdx
@@ -15,11 +15,31 @@ De beduidende cijfers zijn de cijfers in een getal **vanaf het eerste cijfer
 dat verschillend is van nul**. Ze zijn hieronder aangeduid in het <span 
 class="orange">oranje</span>:
 
-$$-0{,}000\orange{50846}$$
-$$0{,}\orange{950}\cdot{10^3}$$
-$$\orange{1}{,}\orange{059}$$
-$$-\orange{5000}\cdot{10^{-9}}$$
-$$0{,}0\orange{2}$$
+
+$$
+-0{,}000\orange{50846}
+$$
+
+
+$$
+0{,}\orange{950}\cdot{10^3}
+$$
+
+
+$$
+\orange{1}{,}\orange{059}
+$$
+
+
+$$
+-\orange{5000}\cdot{10^{-9}}
+$$
+
+
+$$
+0{,}0\orange{2}
+$$
+
 
 ## Aantal beduidende cijfers
 
