--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -109,7 +109,11 @@ heeft als het getal in de berekening met het **minst aantal cijfers na de
 komma**.
 
 Neem bijvoorbeeld de berekening
-$$24{,}28 + 9{,}1 - 3{,}35$$
+
+$$
+24{,}28 + 9{,}1 - 3{,}35
+$$
+
 
 Deze berekening heeft drie termen:
 
@@ -123,10 +127,18 @@ Het kleinste aantal cijfers na de komma is dus 1. Dat betekent dat we de
 **uitkomst moeten afronden tot op 1 cijfer na de komma** <Mute text="(afronden
 op de tienden dus)" />. De uitkomst van de berekening zelf is:
 
-$$24{,}28 + 9{,}1 - 3{,}33 = 36{,}75$$
+
+$$
+24{,}28 + 9{,}1 - 3{,}33 = 36{,}75
+$$
+
 
 Als we dit vervolgens afronden op de tienden, krijgen we:
-$$36{,}\orange{7}\gold{5} \approx 36{,}\orange{8}$$
+
+$$
+36{,}\orange{7}\gold{5} \approx 36{,}\orange{8}
+$$
+
 
 ## Vermenigvuldigingen en delingen
 
@@ -136,7 +148,11 @@ uitkomst afronden zodat die hetzelfde aantal beduidende cijfers heeft als het
 getal in de berekening met het **minst aantal beduidende cijfers**.
 
 Bijvoorbeeld de berekening:
-$$0{,}000247 \cdot 34{,}2 \cdot 9{,}1$$
+
+$$
+0{,}000247 \cdot 34{,}2 \cdot 9{,}1
+$$
+
 
 Deze berekening heeft drie factoren:
 
@@ -148,13 +164,21 @@ Deze berekening heeft drie factoren:
 
 Het kleinste aantal beduidende cijfers is dus 2. Dat betekent dat we de
 **uitkomst moeten afronden tot 2 beduidende cijfers**. De uitkomst is:
-$$0{,}000247 \cdot 34{,}2 \cdot 9{,}1 = 0{,}07687134$$
+
+$$
+0{,}000247 \cdot 34{,}2 \cdot 9{,}1 = 0{,}07687134
+$$
+
 
 Deze uitkomst moeten we afronden zodat enkel de eerste 2 beduidende cijfers
 overblijven <Mute text="($7$ en $6$)" />. We moeten dus afronden op de
 duizendsten <Mute text="(3 plaatsen na de komma)" />:
 
-$$0{,}07\orange{6}\gold{8}7134 \approx 0{,}07\orange{7}$$
+
+$$
+0{,}07\orange{6}\gold{8}7134 \approx 0{,}07\orange{7}
+$$
+
 
 ## Samengevat
 
