--- a/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/intro/index.mdx
@@ -25,16 +25,30 @@ We zullen in een [latere les](functies) het verband tussen functies en vergelijk
 ## Hoe een vergelijking eruit ziet
 
 Een vergelijking heeft meestal de vorm
-$$(\ldots \text{een berekening met }x \ldots) = (\ldots \text{een andere berekening met }x \ldots)$$
+
+$$
+(\ldots \text{een berekening met }x \ldots) = (\ldots \text{een andere berekening met }x \ldots)
+$$
 
 Alles wat **links** van het gelijkheidsteken staat, noemen we **het linkerlid**. Alles wat **rechts** van het gelijkheidsteken staat, noemen we **het rechterlid**.
 
 Enkele voorbeelden van vergelijkingen:
-$$x + 6 = 2 - 3x$$
+
+$$
+x + 6 = 2 - 3x
+$$
+
 Maar het kan ook ingewikkelder zijn:
-$$4x^2 - 3 = 2x^2 + 5$$
+
+$$
+4x^2 - 3 = 2x^2 + 5
+$$
+
 En zelfs:
-$$\frac{\sin(2x) - \cos(-x)}{\sqrt{-x + 3}} = 6x + 1$$
+
+$$
+\frac{\sin(2x) - \cos(-x)}{\sqrt{-x + 3}} = 6x + 1
+$$
 
 Geen paniek als je van die laatste vergelijking niet veel begrijpt, het is maar om te tonen dat een vergelijking niet altijd in zo'n propere vorm zit als de eerste vergelijking.
 
@@ -43,7 +57,11 @@ Geen paniek als je van die laatste vergelijking niet veel begrijpt, het is maar 
 De $x$ in de vergelijking noemen we de **onbekende**. In principe kan je eender welke letter gebruiken als onbekende, maar de gewoonte is om een $x$ te gebruiken.
 
 Het kan ook zijn dat er _verschillende_ onbekenden zijn in één vergelijking, bijvoorbeeld
-$$x^2 - 2y + 6 = 5 - 3x + z$$
+
+$$
+x^2 - 2y + 6 = 5 - 3x + z
+$$
+
 Waar we naast $x$ ook $y$ en $z$ als onbekende hebben. Zo'n vergelijking noemen we dan _een vergelijking in drie onbekenden_. Dit soort vergelijkingen komt later terug in het deel over stelsels.
 
 ## Oplossingsverzameling
@@ -52,16 +70,23 @@ De bedoeling van een vergelijking is meestal om te zoeken **welk(e) getal(len)**
 
 Voor het eerste voorbeeld $\orange{x} + 6 = 2 - 3\orange{x}$, is er maar één getal waarvoor de
 gelijkheid klopt: $\orange{-1}$:
-$\begin{aligned}
+
+$$
+\begin{aligned}
 \orange{-1} + 6 &= 2 - 3 \cdot (\orange{-1})\\
 5 &= 2 + 3\\
 5 &= 5
-\end{aligned}$
+\end{aligned}
+$$
 
 Als je de oplossing(en) in een [verzameling](../verzamelingen) stopt, noemen we die verzameling de _oplossingsverzameling_ van de vergelijking. We stellen de oplossingsverzameling meestal voor met de letter $V$.
 
 De oplossingsverzameling $V$ voor het voorbeeld is dus:
-$$V = \\{\orange{-1}\\}$$
+
+$$
+V = \{\orange{-1}\}
+$$
+
 
 <Expand title="Uitbreiding: Meerdere oplossingen">
 
@@ -69,22 +94,32 @@ Het kan natuurlijk ook dat er meer dan één getal in de oplossingsverzameling
 zit. Voor de vergelijking $x^2 + 2x = 3$ zijn er bijvoorbeeld twee waarden
 die we kunnen invullen voor $x$ zodat de gelijkheid klopt: $\orange{1}$ en
 $\orange{-3}$. Wanneer we $\orange{1}$ invullen krijgen we:
-$\begin{aligned}
+
+$$
+\begin{aligned}
 (\orange{1})^2 + 2\cdot (\orange{1}) &= 3\\
  1 + 2 &= 3\\
  3 &= 3\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Wanneer we $\orange{-3}$ invullen, krijgen we:
-$\begin{aligned}
+
+$$
+\begin{aligned}
 (\orange{-3})^2 + 2\cdot (\orange{-3}) &= 3\\
  9 - 6 &= 3\\
  3 &= 3\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Zowel $\orange{1}$ als $\orange{-3}$ is een oplossing van de vergelijking. De
 oplossingsverzameling is dan
-$$V = \\{\orange{1}, \orange{-3}\\}$$
+
+$$
+V = \{\orange{1}, \orange{-3}\}
+$$
+
 
 </Expand>
 
@@ -93,7 +128,11 @@ $$V = \\{\orange{1}, \orange{-3}\\}$$
 <Attention title="Vergelijking">
 
 Een vergelijking is iets van de vorm
-$$\text{linkerlid} = \text{rechterlid}$$
+
+$$
+\text{linkerlid} = \text{rechterlid}
+$$
+
 Waarbij $\text{linkerlid}$ en $\text{rechterlid}$ een of meerdere **onbekenden** bevatten. Vaak is er maar één onbekende, namelijk $x$.
 </Attention>
 
