--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -22,7 +22,11 @@ Het vereenvoudigen van een eenterm gaat als volgt:
 
 Als voorbeeld zullen we volgende eenterm vereenvoudigen:
 
-$$-3y\cdot (2xz)^3 \cdot(-y)^2\cdot (-2)\cdot (-5)$$
+
+$$
+-3y\cdot (2xz)^3 \cdot(-y)^2\cdot (-2)\cdot (-5)
+$$
+
 
 ## Haakjes wegwerken
 
@@ -35,18 +39,30 @@ verschillende manieren waarop haakjes kunnen voorkomen in een eenterm:
 In ons voorbeeld staan er haakjes in de factoren $\orange{(2xz)^3}$,
 $\orange{(-y)^2}$, $\orange{(-2)}$ en $\orange{(-5)}$:
 
-$$-3y\cdot \orange{(2xz)^3}\cdot\orange{(-y)^2}\cdot \orange{(-2)} \cdot \orange{(-5)}$$
+
+$$
+-3y\cdot \orange{(2xz)^3}\cdot\orange{(-y)^2}\cdot \orange{(-2)} \cdot \orange{(-5)}
+$$
+
 
 ### Haakjes met een macht uitwerken
 
 Als er een **macht bij de haakjes** staat, **verhef je elke factor binnen de
 haakjes** tot die macht. Voor de factor $\orange{(2xz)^3}$ geeft dit:
 
-$$(2xz)^3 = 2^3x^3z^3$$
+
+$$
+(2xz)^3 = 2^3x^3z^3
+$$
+
 
 Dit invullen in het voorbeeld geeft:
 
-$$-3y\cdot \orange{(2xz)^3}\cdot(-y)^2\cdot (-2) \cdot (-5) = -3y\cdot \orange{2^3x^3z^3}\cdot(-y)^2\cdot (-2) \cdot (-5)$$
+
+$$
+-3y\cdot \orange{(2xz)^3}\cdot(-y)^2\cdot (-2) \cdot (-5) = -3y\cdot \orange{2^3x^3z^3}\cdot(-y)^2\cdot (-2) \cdot (-5)
+$$
+
 
 Ziezo, die haakjes zijn al weg! 💪
 
@@ -55,15 +71,21 @@ minteken binnen de haakjes moet je ook tot de macht verheffen. Dat doe je door
 in gedachten het **minteken te vervangen door $(-1)$** en die mee te verheffen
 tot de macht:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 (\orange{-}y)^2 &= (\orange{(-1)}\cdot y)^2\\
  &= \orange{(-1)}^2\cdot y^2\\
  &= y^2
-\end{aligned}$
+\end{aligned}
+$$
 
 Terug invullen in het voorbeeld geeft:
 
-$$-3y\cdot 2^3x^3z^3\cdot\orange{(-y)^2}\cdot (-2) \cdot (-5) = -3y\cdot 2^3x^3z^3\cdot\orange{y^2}\cdot (-2) \cdot (-5)$$
+
+$$
+-3y\cdot 2^3x^3z^3\cdot\orange{(-y)^2}\cdot (-2) \cdot (-5) = -3y\cdot 2^3x^3z^3\cdot\orange{y^2}\cdot (-2) \cdot (-5)
+$$
+
 
 <Expand title="Waarom mogen we een minteken vervangen door $(-1)$?">
 
@@ -79,7 +101,11 @@ of $(-1)\cdot 2$, dat is allemaal hetzelfde. Eén pot nat. 🍯
 
 De laatste haakjes in ons voorbeeld staan rond de factoren $\orange{(-2)}$ en $\orange{(-5)}$:
 
-$$-3y\cdot 2^3x^3z^3\cdot y^2\cdot \orange{(-2)} \cdot \orange{(-5)}$$
+
+$$
+-3y\cdot 2^3x^3z^3\cdot y^2\cdot \orange{(-2)} \cdot \orange{(-5)}
+$$
+
 
 Ze staan er om de **mintekens af te schermen** van de maaltekens die ervoor
 staat. In dat geval gaan we weer in gedachte de **mintekens vervangen door
@@ -87,11 +113,13 @@ $(-1)$**. Dit doen we ook voor het minteken van de coëfficiënt. Vervolgens
 zetten we alle $(-1)-$en voorop en bepalen we het uiteindelijke teken van de
 coëfficiënt.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{-}3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-2)} \cdot \green{(-5)} &= \orange{(-1)}\cdot 3y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{(-1)\cdot 2} \cdot \green{(-1)\cdot 5}\\
  &= \orange{(-1)}\cdot\blue{(-1)}\cdot\green{(-1)}\cdot 3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}\\
  &= \orange{-}3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot \blue{2} \cdot \green{5}
-\end{aligned}$
+\end{aligned}
+$$
 
 <Expand title="Waarom mag je alle $(-1)-$en voorop zetten?">
 
@@ -99,11 +127,13 @@ De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de volgorde
 waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 5\cdot 2 \cdot 3 = 30\\
  3 \cdot 2 \cdot 5 = 30\\
  2 \cdot 5 \cdot 3 = 30\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
 van plaats veranderen**.
@@ -113,13 +143,15 @@ met $(-1)$. Een minteken is dus hetzelfde als een **factor $(-1)$**. Hierboven
 zeiden we dat we in een vermenigvuldiging de factoren altijd van plaats mogen
 veranderen, dus we mogen gerust alle $(-1)-$en voorop zetten.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{-}5\cdot (\orange{-}2) \cdot (\orange{-}3) &= - 30\\
  \orange{-}2\cdot (\orange{-}3) \cdot (\orange{-}5) &= - 30\\
  \orange{-}2\cdot (\orange{-}5) \cdot (\orange{-}3) &= - 30\\
  \orange{(-1)} \cdot 2 \cdot \orange{(-1)} \cdot 5 \cdot \orange{(-1)} \cdot 3 &= - 30\\
  \orange{(-1)} \cdot \orange{(-1)} \cdot \orange{(-1)} \cdot 2\cdot 5 \cdot 3 &= - 30\\
-\end{aligned}$
+\end{aligned}
+$$
 
 
 </Expand>
@@ -128,26 +160,40 @@ $\begin{aligned}
 
 Onze veelterm bevat nu geen haakjes meer:
 
-$$-3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot 2 \cdot 5$$
+
+$$
+-3\cdot y\cdot 2^3x^3z^3\cdot y^2\cdot 2 \cdot 5
+$$
+
 
 De volgende stap is om de [coëfficiënt](eenterm/#coëfficiënt-en-lettergedeelte), of het
 _cijfergedeelte_, van de eenterm uit te rekenen. Daarvoor mag je in gedachte alle
 [variabelen](variabele) even weglaten. Vervolgens reken je de bewerking die
 er staat gewoon uit:
 
-$$-3\gray{\cdot y}\cdot 2^3\gray{x^3z^3\cdot y^2}\cdot 2 \cdot 5$$
+
+$$
+-3\gray{\cdot y}\cdot 2^3\gray{x^3z^3\cdot y^2}\cdot 2 \cdot 5
+$$
+
 
 Dit uitrekenen geeft:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -3\cdot 2^3 \cdot 2 \cdot 5 &= -3 \cdot 8 \cdot 10\\
  &= -24 \cdot 10 \\
  &= -240
-\end{aligned}$
+\end{aligned}
+$$
 
 Dit resultaat terug invullen geeft:
 
-$$\orange{-240}\cdot y\cdot x^3z^3\cdot y^2$$
+
+$$
+\orange{-240}\cdot y\cdot x^3z^3\cdot y^2
+$$
+
 
 <Expand title="Waarom mag je de coëfficiënt apart uitrekenen?">
 
@@ -156,32 +202,38 @@ De vermenigvuldiging van rationale getallen is **commutatief**. <Mute
 text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de volgorde
 waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 4\cdot 5 \cdot 7 = 140\\
  7 \cdot 4 \cdot 5 = 140\\
  5 \cdot 4 \cdot 7 = 140\\
-\end{aligned}$
+\end{aligned}
+$$
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
 van plaats veranderen**. Omdat zowel de variabelen als de getallen in onze
 eenterm _rationaal_ zijn <Mute text="(reëel mag ook)" />, mogen we ze dus van
 plaats veranderen.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 4 \cdot a \cdot b \cdot 3 \\
  = 3 \cdot a \cdot 4 \cdot b\\
  = b \cdot 3 \cdot a \cdot 4\\
-\end{aligned}$
+\end{aligned}
+$$
 
 We kiezen ervoor om het volledige
 [cijfergedeelte](eenterm/#coëfficiënt-en-lettergedeelte) vooraan te zetten
 en als eerste uit te rekenen.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \orange{4} \cdot a \cdot b \cdot \orange{3} \\
  = \orange{4 \cdot 3} \cdot a \cdot b \\
  = \orange{12} \cdot a \cdot b \\
-\end{aligned}$
+\end{aligned}
+$$
 
 </Expand>
 
@@ -196,40 +248,66 @@ variabele.
 In ons voorbeeld komen drie variabelen voor: $x$, $y$ en $z$. Enkel de
 variabele $y$ komt meerdere keren voor:
 
-$$-240\cdot \orange{y}\cdot x^3z^3 \cdot \orange{y^2}$$
+
+$$
+-240\cdot \orange{y}\cdot x^3z^3 \cdot \orange{y^2}
+$$
+
 
 Het optellen van de exponenten van $\orange{y}$ geeft:
 
-$\begin{aligned}
+$$
+\begin{aligned}
 -240\cdot \orange{y^1}\cdot x^3z^3 \cdot \orange{y^2} &= -240\cdot \orange{y^{1 + 2}}\cdot x^3z^3\\
  &= -240\cdot \orange{y^{3}}\cdot x^3z^3\\
-\end{aligned}$
+\end{aligned}
+$$
 
 <Expand title="Waarom tellen we de exponenten bij elkaar op?">
 
 Stel dat we de volgende eenterm hebben:
 
-$$\orange{a^4} \cdot \blue{a^2} \cdot b^3$$
+
+$$
+\orange{a^4} \cdot \blue{a^2} \cdot b^3
+$$
+
 
 Dan kunnen we die eenterm languit schrijven als
 
-$$\orange{a \cdot a \cdot a \cdot a} \cdot \blue{a \cdot a} \cdot b \cdot b \cdot b$$
+
+$$
+\orange{a \cdot a \cdot a \cdot a} \cdot \blue{a \cdot a} \cdot b \cdot b \cdot b
+$$
+
 
 We vermenigvuldigen $a$ dus 6 keer met zichzelf en vervolgens vermenigvuldigen
 we $b$ 3 keer met zichzelf. Dat is hetzelfde als
 
-$$a^6\cdot b^3$$
+
+$$
+a^6\cdot b^3
+$$
+
 
 Vanwaar komt die $6$ van $a^6$ nu? Wel de $\orange{a^4}$ gaf ons 4 $a$'s en de
 $\blue{a^2}$ gaf er ons nog eens 2. In totaal kregen we dus $\orange{4} +
 \blue{2} = 6$ $a$'s. We kunnen bijgevolg zeggen dat:
 
-$$\orange{a^4} \cdot \blue{a^2} \cdot b^3 = a^{\orange{4} + \blue{2}}\cdot b^3$$
+
+$$
+\orange{a^4} \cdot \blue{a^2} \cdot b^3 = a^{\orange{4} + \blue{2}}\cdot b^3
+$$
+
 
 In het algemeen is de regel dat je in een vermenigvuldiging **exponenten bij
 elkaar mag optellen** wanneer ze **hetzelfde grondtal hebben**:
 
-$$\orange{a^n} \cdot \blue{a^m} = a^{\orange{n} + \blue{m}}$$
+
+$$
+\orange{a^n} \cdot \blue{a^m} = a^{\orange{n} + \blue{m}}
+$$
+
 
 Waarbij $a, \orange{n}, \blue{m} \in \mathbb{Q}$ <Mute text="(of $\mathbb{R}$ mag ook)" />.
 
@@ -247,16 +325,28 @@ van rangschikken is:
 
 We hebben ons voorbeeld al tot deze vorm kunnen vereenvoudigen:
 
-$$-240\cdot y^{3}\cdot x^3z^3$$
+
+$$
+-240\cdot y^{3}\cdot x^3z^3
+$$
+
 
 De coëfficiënt en het toestandsteken (de $-240$) staan al voorop :+1:. Nu
 moeten we enkel nog de variabelen **alfabetisch** rangschikken:
 
-$$-240\cdot x^3\cdot y^{3}\cdot z^3$$
+
+$$
+-240\cdot x^3\cdot y^{3}\cdot z^3
+$$
+
 
 Tenslotte laten we de maaltekens weg waar het kan:
 
-$$-240 x^3 y^{3}z^3$$
+
+$$
+-240 x^3 y^{3}z^3
+$$
+
 
 Wat. Een. Prachtige. Eenterm. 😌
 
