--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -17,40 +17,45 @@ daarom toch nog eens best alles proper opsommen (ba dum tss 🥁).
 ## De verkeersregels van het rekenen
 
 Hoe moet je een wiskundige uitdrukking als
-$\def\vba{4 - 5 \cdot 8 ^ 2}$
-$\vba$
+$4 - 5 \cdot 8 ^ 2$
 uitrekenen?
 
 Zo?
 \begin{equation}
-$\begin{aligned}
+$$
+\begin{aligned}
 \neg{4 - 5} \cdot 8 ^ 2
 &= \neg{-1} \cdot 8 ^ 2 \\
  &= -8 ^ 2 \\
  &= \neg{-64}
-\end{aligned}$
+\end{aligned}
+$$
 \label{eq:sumfirst}
 \end{equation}
 
 Of zo?
 \begin{equation}
-$\begin{aligned}
+$$
+\begin{aligned}
 4 - \neg{5 \cdot 8} ^ 2
 &= 4 - \neg{40}^2 \\
  &= 4 - \neg{1600} \\
  &= \neg{- 1596}
-\end{aligned}$
+\end{aligned}
+$$
 \label{eq:multfirst}
 \end{equation}
 
 Of misschien zo?
 \begin{equation}
-$\begin{aligned}
+$$
+\begin{aligned}
 4 - 5 \cdot \pos{8 ^ 2}
 &= 4 - 5 \cdot \pos{64} \\
  &= 4 - \pos{320} \\
  &= \pos{- 316}
-\end{aligned}$
+\end{aligned}
+$$
 \label{eq:expfirst}
 \end{equation}
 
@@ -78,11 +83,13 @@ allebei voorrang op een som en een aftrekking. Wanneer twee zulke bewerkingen
 na elkaar geschreven staan (dus bv. een deling en dan een vermenigvuldiging),
 spreken we af om gewoon **van links naar rechts** te werken.
 De uitdrukking $8 \div 4 \cdot 3$ rekenen we dus uit als
-$\begin{aligned}
+$$
+\begin{aligned}
 \pos{8 \div 4} \cdot 3
 &= \pos{2} \cdot 3 \\
  &= \pos{6}
-\end{aligned}$
+\end{aligned}
+$$
 omdat we de deling eerst tegenkomen wanneer we van links naar rechts lezen.
 
 We zullen die volgorde van de bewerkingen eens toepassen op $\vba$.
@@ -92,18 +99,30 @@ $\clra{4 - 5}$ doen of eerst $\clra{5 \cdot 8}$ of eerst $\clra{8 ^ 2}$? De
 regels zeggen: _"Machten hebben
 voorrang op vermenigvuldigingen"_, de eerste stap is dus om de macht uit te rekenen:
 
-$$ 4 - 5 \cdot \clra{8 ^ 2} = 4 - 5 \cdot \clra{64}$$
+
+$$
+ 4 - 5 \cdot \clra{8 ^ 2} = 4 - 5 \cdot \clra{64}
+$$
+
 
 Nu hebben we de uitdrukking $4 - 5 \cdot 64$ met nog twee bewerkingen:
 min en maal. Eerst $\clra{4 - 5}$ of eerst $\clra{5 \cdot 64}$?
 _"Vermenigvuldingen hebben voorrang op optellingen <Mute text="(en aftrekkingen)" />"_, dus:
 
-$$ 4 - \clra{5 \cdot 64} = 4 - \clra{320} $$
+
+$$
+ 4 - \clra{5 \cdot 64} = 4 - \clra{320} 
+$$
+
 
 Tenslotte hebben we de uitdrukking $4 - 320$ en blijft er maar één
 bewerking over; een aftrekking:
 
-$$ \clra{4 - 320} = \clra{-316} $$
+
+$$
+ \clra{4 - 320} = \clra{-316} 
+$$
+
 
 De juiste manier om $\vba$ uit te rekenen, is dus zoals in methode
 $\ref{eq:expfirst}$.
@@ -112,25 +131,45 @@ $\ref{eq:expfirst}$.
 
 In plaats van langzaam op te bouwen naar een ingewikkeld voorbeeld, zullen we
 meteen eens een monster van uitdrukking uitrekenen.
-$$-(4 - 7)^2 \cdot 2 + \sqrt{9 \cdot 4} \div 3 - \frac{4 \cdot 3}{-5 + 7}$$
+
+$$
+-(4 - 7)^2 \cdot 2 + \sqrt{9 \cdot 4} \div 3 - \frac{4 \cdot 3}{-5 + 7}
+$$
+
 
 Hoe kan je zoiets uitrekenen? De volgorde van de bewerkingen leidt er ons
 stapje per stapje door. Ze zegt dat de **haakjes** altijd eerst moeten worden
 uitgerekend, zij hebben voorrang op **alles**. Hier staan **vier** dingen tussen haakjes:
-$$-(\clra{4 - 7})^2 \cdot 2 + \sqrt{\clra{9 \cdot 4}} \div 3 - \frac{\clra{4 \cdot 3}}{\clra{-5 + 7}}$$
+
+$$
+-(\clra{4 - 7})^2 \cdot 2 + \sqrt{\clra{9 \cdot 4}} \div 3 - \frac{\clra{4 \cdot 3}}{\clra{-5 + 7}}
+$$
+
 
 Merk op dat we de _teller_ en _noemer_ van een breuk ook als iets tussen haakjes zien. Dat
 komt omdat we een breuk zoals bijvoorbeeld $\frac{1 - 4}{3 + 2}$ ook kunnen schrijven als
 een deling $(1 - 4) \div (3 + 2)$. De teller en noemer staan dus eigenlijk tussen haakjes. Ook alles wat _onder een wortel_ staat, staat eigenlijk tussen haakjes.
 Al die haakjes uitrekenen is snel gebeurd:
-$$-(\clra{-3})^2 \cdot 2 + \sqrt{\clra{36}}\div 3 - \frac{\clra{12}}{\clra{2}}$$
+
+$$
+-(\clra{-3})^2 \cdot 2 + \sqrt{\clra{36}}\div 3 - \frac{\clra{12}}{\clra{2}}
+$$
+
 
 De uitdrukking wordt al meteen een pak eenvoudiger. Na de haakjes hebben de
 **machten en wortels** voorrang. Er zijn **twee** machten en wortels:
-$$-\clra{(-3)^2} \cdot 2 + \clra{\sqrt{36}}\div 3 - \frac{12}{2}$$
+
+$$
+-\clra{(-3)^2} \cdot 2 + \clra{\sqrt{36}}\div 3 - \frac{12}{2}
+$$
+
 
 Deze macht en wortel uitrekenen geeft:
-$$-\clra{9} \cdot 2 + \clra{6}\div 3 - \frac{12}{2}$$
+
+$$
+-\clra{9} \cdot 2 + \clra{6}\div 3 - \frac{12}{2}
+$$
+
 
 Onthoud dat een negatief getal kwadrateren (zoals $\clra{(-3)^2}$), een
 positief getal oplevert (hier $\clra{9}$). Het minnetje voor de $\clra{9}$ in
@@ -139,15 +178,27 @@ bij $-\clra{(-3)^2}$.
 
 Na de machten en wortels, hebben de **vermenigvuldigingen en delingen**
 voorrang. Zo zijn er **drie**:
-$$\clra{-9 \cdot 2} + \clra{6\div 3} - \clra{\frac{12}{2}}$$
+
+$$
+\clra{-9 \cdot 2} + \clra{6\div 3} - \clra{\frac{12}{2}}
+$$
+
 
 Herinner je dat een breuk gewoon een deling is van de _teller_ gedeeld door de
 _noemer_. De vermenigvuldigingen en delingen uitrekenen geeft:
-$$\clra{-18} + \clra{2} - \clra{6}$$
+
+$$
+\clra{-18} + \clra{2} - \clra{6}
+$$
+
 
 Er schiet enkel nog een eenvoudig sommetje over met enkel optellingen en
 aftrekkingen. Die werken we gewoon uit van links naar rechts:
-$$\clra{-18 + 2 - 6} = \clra{-22}$$
+
+$$
+\clra{-18 + 2 - 6} = \clra{-22}
+$$
+
 
 ## Volledige uitdrukkingen binnen haakjes
 
@@ -158,15 +209,24 @@ uitdrukking binnen de haakjes natuurlijk ook gewoon de volgorde van de
 bewerkingen toe.
 
 Bijvoorbeeld
-$$-5^3 + \frac{\sqrt{-6 + 5^2 \cdot 2}}{2}$$
+
+$$
+-5^3 + \frac{\sqrt{-6 + 5^2 \cdot 2}}{2}
+$$
+
 
 In de teller staat een uitdrukking op zich:
-$$\sqrt{-6 + 5^2 \cdot 2}$$
+
+$$
+\sqrt{-6 + 5^2 \cdot 2}
+$$
+
 
 Hier passen we apart de volgorde van de bewerkingen op toe. Het resultaat
 stoppen we dan in de oorspronkelijke uitdrukking.
 \begin{equation}
-$\begin{aligned}
+$$
+\begin{aligned}
 \sqrt{-6 + \clra{5^2} \cdot 2}
 &= \sqrt{-6 + \clra{25} \cdot 2} \\
  &= \sqrt{-6 + \clra{25 \cdot 2}} \\
@@ -175,11 +235,16 @@ $\begin{aligned}
  &= \sqrt{\clra{44}} \\
  &= \clra{\sqrt{44}} \\
  &\approx \clra{6{,}63\ldots}
-\end{aligned}$
+\end{aligned}
+$$
 \end{equation}
 
 De oorspronkelijke uitdrukking wordt dus:
-$$-5^3 + \frac{\clra{6{,}63\ldots}}{2}$$
+
+$$
+-5^3 + \frac{\clra{6{,}63\ldots}}{2}
+$$
+
 
 Hier kan je weer de volgorde van de bewerkingen op toepassen. Je zult vinden
 dat de uitdrukking gelijk is aan $\clra{-121{,}6}$ (afgerond op 1 cijfer na de
